Convenience settings for altering the build types with CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 project(evilpoison,c)
 
 set(VERSION 0.1)
+#set(CMAKE_VERBOSE_MAKEFILE true)
+set(CMAKE_BUILD_TYPE Debug)
+#set(CMAKE_BUILD_TYPE Release)
+
+set(CMAKE_C_FLAGS_DEBUG "-g -Wall -Werror")
+set(CMAKE_C_FLAGS_RELEASE "-O3")
 
 find_package(X11 REQUIRED)
 
