--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(VERSION 0.1)
 set(CMAKE_BUILD_TYPE Debug)
 #set(CMAKE_BUILD_TYPE Release)
 
-set(CMAKE_C_FLAGS_DEBUG "-g -Wall -Werror")
+set(CMAKE_C_FLAGS_DEBUG "-g -Wall -W -Wstrict-prototypes -Wpointer-arith -Wcast-align -Wcast-qual -Wshadow -Waggregate-return -Wnested-externs -Winline -Wwrite-strings -Wundef -Wsign-compare -Wmissing-prototypes -Wredundant-decls")
 set(CMAKE_C_FLAGS_RELEASE "-O3")
 
 find_package(X11 REQUIRED)
