Info windows are now atomic and display information at time of switching (delayed) ... sorry about new warning messages, left them in for now because I want to revisit the code when I'm a bit more awake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,4 +51,4 @@ add_definitions(-DVERSION='"${VERSION}"')
 add_executable(evilpoison
   client.c  events.c  ewmh.c  main.c  misc.c  new.c  screen.c)
 
-target_link_libraries(evilpoison ${X11_LIBRARIES})
+target_link_libraries(evilpoison ${X11_LIBRARIES} pthread)
