Add EvilPoison seperated command infrastructure with: set/unset. No tests yet ... these to follow

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,7 +39,8 @@ add_definitions(-DCOLOURMAP)
 add_definitions(-DVERSION='"${VERSION}"')
 
 add_executable(evilpoison
-  client.c command.c dictionary.c events.c ewmh.c
+  client.c command.c dictionary.c events.c 
+  evilpoison_commands.c ewmh.c
   main.c misc.c new.c screen.c settings.c)
 
 target_link_libraries(evilpoison ${X11_LIBRARIES} pthread)
