--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -1,7 +1,8 @@
 include ../settings.make
 
 HEADERS  = evilpoison.h log.h settings.h
-SRCS     = client.c command.c dictionary.c events.c main.c misc.c \
+SRCS     = client.c command.c dictionary.c events.c \
+					 evilpoison_commands.c main.c misc.c \
 					 new.c screen.c ewmh.c settings.c
 OBJS     = $(SRCS:.c=.o)
 
