--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,8 +37,8 @@ add_definitions(-DCOLOURMAP)
 add_definitions(-DVERSION='"${VERSION}"')
 
 add_executable(evilpoison
-  bind.c client.c command.c dictionary.c events.c 
-  evilpoison_commands.c ewmh.c
+  bind.c client.c command.c commandline.c dictionary.c
+  events.c evilpoison_commands.c ewmh.c
   main.c misc.c new.c screen.c settings.c)
 
 target_link_libraries(evilpoison ${X11_LIBRARIES} pthread)
