--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,13 @@
 project(evilpoison,c)
 
-set(VERSION 0.1)
-#set(CMAKE_VERBOSE_MAKEFILE true)
-set(CMAKE_BUILD_TYPE Debug)
-#set(CMAKE_BUILD_TYPE Release)
-
-set(CMAKE_C_FLAGS_DEBUG "-g -Wall -W -Wstrict-prototypes -Wpointer-arith -Wcast-align -Wcast-qual -Wshadow -Waggregate-return -Wnested-externs -Winline -Wwrite-strings -Wundef -Wsign-compare -Wmissing-prototypes -Wredundant-decls")
-set(CMAKE_C_FLAGS_RELEASE "-O3")
-
-subdirs(src tests)
+find_package(X11 REQUIRED)
 
 set(VERSION 0.1)
-
 #set(CMAKE_VERBOSE_MAKEFILE true)
 set(CMAKE_BUILD_TYPE Debug)
 #set(CMAKE_BUILD_TYPE Release)
 
 set(CMAKE_C_FLAGS_DEBUG "-std=gnu99 -g -Wall -W -Wstrict-prototypes -Wpointer-arith -Wcast-align -Wcast-qual -Wshadow -Waggregate-return -Wnested-externs -Winline -Wwrite-strings -Wundef -Wsign-compare -Wmissing-prototypes -Wredundant-decls")
 set(CMAKE_C_FLAGS_RELEASE "-std=gnu99 -O3")
+
+subdirs(src tests)
