Cleanup unittests makefile and add some missing required objects [#22 state:resolved]

--- a/tests/GNUmakefile
+++ b/tests/GNUmakefile
@@ -4,16 +4,20 @@ HEADERS  = check_settings.h
 SRCS     = tests.c \
 					 check_bind.c check_command.c \
 					 check_dictionary.c check_settings.c
-OBJS     = $(SRCS:.c=.o) \
-	../src/bind.o ../src/command.o \
-	../src/dictionary.o ../src/settings.o
+OBJS     = $(SRCS:.c=.o)
+EPOBJS   = ../src/bind.o ../src/command.o \
+					 ../src/commandline.o ../src/dictionary.o \
+					 ../src/settings.o
 
-.PHONY: all install dist debuild clean
+.PHONY: all install dist debuild clean epobjs
 
 all: tests
 
-tests: $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $@ $(LDFLAGS) -lcheck
+epobjs:
+	make -C ../src $(EPOBJS)
+
+tests: epobjs $(OBJS)
+	$(CC) $(CFLAGS) $(OBJS) $(EPOBJS) -o $@ $(LDFLAGS) -lcheck
 
 %.o: %.c $(HEADERS)
 	$(CC) $(CFLAGS) -c $< -I../src -L../src
