Revert "Ensure full rebuild when revision changes (for your safety and ours)"
This reverts commit ee3317d319003e1ed0f6fdd3bd958575bada1e0e.

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -13,13 +13,8 @@ all: evilpoison
 evilpoison: $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $@ $(LDFLAGS)
 
-%.o: %.c $(HEADERS) revision
+%.o: %.c $(HEADERS)
 	$(CC) $(CFLAGS) -c $<
-
-revision:
-ifneq "$(git_revision)" "$(file_revision)"
-	echo "$(git_revision)" > revision
-endif
 
 install: evilpoison
 	if [ -f evilpoison.exe ]; then mv evilpoison.exe evilpoison; fi
@@ -29,4 +24,4 @@ install: evilpoison
 	#gzip -9 $(prefix)/share/man/man1/evilpoison.1
 
 clean:
-	rm -f evilpoison evilpoison.exe $(OBJS) revision
+	rm -f evilpoison evilpoison.exe $(OBJS)
